--- a/src/gui/mzroll/forms/peakdetectiondialog.ui
+++ b/src/gui/mzroll/forms/peakdetectiondialog.ui
@@ -669,6 +669,23 @@
          <zorder>mustHaveMs2</zorder>
         </widget>
        </item>
+       <item row="5" column="0">
+        <widget class="QCheckBox" name="peakMl">
+         <property name="text">
+          <string>Peak Curation</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <widget class="QComboBox" name="modelTypes">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="acceptDrops">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="groupFilteringTab">
