--- a/src/gui/mzroll/forms/infodialog.ui
+++ b/src/gui/mzroll/forms/infodialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>372</width>
-    <height>408</height>
+    <width>373</width>
+    <height>466</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -24,6 +24,27 @@
   </property>
   <property name="windowTitle">
    <string>Support Information</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">QPushButton {
+	background-color: white;
+	padding: 6px;
+	border: 1px solid orange;
+	border-radius: 3px;
+	text-align: left;
+	margin: 6px 3px;
+}
+
+QPushButton:hover {
+	background-color: rgb(117, 110, 210);
+	color: white;
+	border: 1px solid rgb(117, 110, 210);
+}
+
+QPushButton:focus {
+	outline: none;
+	border: 1px solid black;
+}</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -183,6 +204,19 @@
         </property>
         <property name="text">
          <string>Cite El-MAVEN</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="peakMLButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>PeakML</string>
         </property>
        </widget>
       </item>
