[fix] Made changes after usability review

--- a/src/gui/mzroll/forms/peakdetectiondialog.ui
+++ b/src/gui/mzroll/forms/peakdetectiondialog.ui
@@ -50,7 +50,7 @@
    <item>
     <widget class="QTabWidget" name="tabwidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="featureSelectionTab">
       <attribute name="title">
@@ -1359,6 +1359,9 @@
     </widget>
    </item>
   </layout>
+  <zorder>groupBox_4</zorder>
+  <zorder>resetButton</zorder>
+  <zorder>tabwidget</zorder>
  </widget>
  <tabstops>
   <tabstop>tabwidget</tabstop>
