--- a/src/gui/mzroll/forms/pollyelmaveninterface.ui
+++ b/src/gui/mzroll/forms/pollyelmaveninterface.ui
@@ -105,7 +105,7 @@
    <item row="1" column="0" colspan="2">
     <widget class="QTabWidget" name="sendModeTab">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="sendToAppTab">
       <attribute name="title">
@@ -700,7 +700,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>240</y>
+         <y>280</y>
          <width>391</width>
          <height>32</height>
         </rect>
@@ -806,7 +806,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>130</y>
+         <y>160</y>
          <width>389</width>
          <height>101</height>
         </rect>
@@ -975,12 +975,35 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="horizontalLayoutWidget">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>120</y>
+         <width>391</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_9">
+        <item>
+         <widget class="QCheckBox" name="exportRawData">
+          <property name="text">
+           <string>Export emDB with raw data</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
       <zorder>horizontalLayoutWidget_5</zorder>
       <zorder>label_2</zorder>
       <zorder>horizontalLayoutWidget_7</zorder>
       <zorder>horizontalLayoutWidget_8</zorder>
       <zorder>horizontalLayoutWidget_9</zorder>
       <zorder>projectOptionsAlt</zorder>
+      <zorder>horizontalLayoutWidget</zorder>
      </widget>
     </widget>
    </item>
