--- a/src/gui/mzroll/forms/pollyelmaveninterface.ui
+++ b/src/gui/mzroll/forms/pollyelmaveninterface.ui
@@ -1018,6 +1018,9 @@
            <property name="text">
             <string>Complete-Range EIC</string>
            </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
           </widget>
          </widget>
         </item>
